--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     background: linear-gradient(to right, #df9aff, #efcef8);
     color: #fff;
     text-align: center;
-    font-family: 'Comic Sans MS', cursive;
+    font-family: 'Comic Sans MS', sans-serif;
     padding: 50px;
   }
 
